--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 quarkus.lambda.handler=test
-quarkus.native.additional-build-args=-H:IncludeResources="application.properties|com/amazonaws/partitions/endpoints.json"
+quarkus.ssl.native=true
+quarkus.native.additional-build-args =\
+  -H:ReflectionConfigurationFiles=reflect.json,\
+  -H:ResourceConfigurationFiles=resources.json,\
+  -H:DynamicProxyConfigurationFiles=proxy.json
